--- a/common.css
+++ b/common.css
@@ -3,12 +3,37 @@ body {
 }
 
 .header	 {
-	display: table;
+	width: 60em;
+	float: center;
 	margin: 0 auto;
 }
 
-.nav0	{
+.home	{
 	list-style-type: none;
+	float: left;
+	display: inline;
+	margin: 0em;
+}
+
+.home a	{
+	transition: all .1s ease-in;
+	-moz-transition: all .1s ease-in;
+    -o-transition: all .1s ease-in;
+    -webkit-transition: all .1s ease-in;
+	font-family: 'Source Code Pro', monospace;
+	text-decoration: none;
+	background: rgba(230, 230, 230, 1.0);
+	color: #242424;
+}
+
+.home a:hover	{
+	background: rgba(36, 36, 36, 1.0);
+	color: #ffffff;
+}
+
+.nav0	{
+	float: right;
+	margin: 0 auto;
 }
 
 .nav0 a	{
@@ -29,7 +54,11 @@ body {
 
 .nav_item	{
 	display: inline;
-	margin: 1em;
+	margin: 0.5em;
+}
+
+.home_btn	{
+
 }
 
 .headline	{
