--- a/common.css
+++ b/common.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Source+Code+Pro:ital,wght@1,300&display=swap');
+
 body {
 	background: rgba(230, 230, 230, 1.0);
 }
