--- a/css/common.css
+++ b/css/common.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Source+Code+Pro:ital@1&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro&display=swap');
 
 body {
 	background: rgba(230, 230, 230, 1.0);
@@ -87,14 +88,14 @@ div.filler {
 }
 
 h1.headline	{
-	font-family: 'Source Code Pro', monospace;
-	font-style: italic;
+	font-family: 'Source Sans Pro', monospace;
+    font-size: 2.5em;
 	color: #242424;
 }
 
 p.bodytext	{
-	font-family: 'Source Code Pro', monospace;
-	font-style: italic;
+	font-family: 'Source Sans Pro', monospace;
+    font-size: 1.2em;
 	color: #242424;
 }
 
@@ -115,7 +116,7 @@ p.bodytext	{
 }
 
 .info	{
-	font-family: 'Source Code Pro', monospace;
+	font-family: 'Source Sans Pro', monospace;
 	font-style: italic;
 	color: #ffffff;
 	text-align: center;
@@ -127,18 +128,28 @@ p.bodytext	{
 	bottom: 0;
 	width: 100%;
 	background: rgba(36, 36, 36, 1.0);
-	display: block;
 }
 
 #cookies p	{
-	font-family: 'Arial', sans-serif;
+	margin: 1em;
+	font-family: 'Source Sans Pro', monospace;
 	color: #ffffff;
+	
+}
+
+#cookies a	{
+	color: #009999;
 }
 
 #cookies button	{
 	position: relative;
 	float: right;
-	right: 2em;
-	bottom: 2em;
+	right: .1em;
 	padding: 1em;
+}
+
+#back	{
+	font-family: 'Source Code Pro', monospace;
+	font-style: italic;
+	text-decoration: none;
 }
