--- a/css/common.css
+++ b/css/common.css
@@ -6,6 +6,7 @@ body {
 }
 
 .header	 {
+	background: rgba(255, 255, 255, 1.0);
 	max-width: 60em;
 	float: center;
 	margin: 0 auto;
@@ -43,8 +44,8 @@ body {
 .nav0	{
 	list-style-type: none;
 	display: inline;
-	float: right;
 	margin: 0 auto;
+	float: right;
 }
 
 .nav0 a	{
